# wx-ghcnd

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  init-data.sh  pyproject.toml  wx-ghcnd.py
.streamlit/: config.toml
scripts/: fail_on_regex_match.sh  init-data.sh  latest_pypi_version.sh  metrics_cc_filter.py  run-mypy-all-python-versions.sh  venv_runner.sh
src/: wx-ghcnd.py
src/ghcnd/: load.py
